hidden si pentru liniile de tabel

--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -1644,7 +1644,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr id="c1row" class="hidden">
                         <td class="p-2">Child #1</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1690,7 +1690,7 @@
                             <input type="text" id="ex3_c1d_other" name="ex3_c1d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c2row" class="hidden">
                         <td class="p-2">Child #2</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1736,7 +1736,7 @@
                             <input type="text" id="ex3_c2d_other" name="ex3_c2d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c3row" class="hidden">
                         <td class="p-2">Child #3</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1782,7 +1782,7 @@
                             <input type="text" id="ex3_c3d_other" name="ex3_c3d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c4row" class="hidden">
                         <td class="p-2">Child #4</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1828,7 +1828,7 @@
                             <input type="text" id="ex3_c4d_other" name="ex3_c4d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c5row" class="hidden">
                         <td class="p-2">Child #5</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1874,7 +1874,7 @@
                             <input type="text" id="ex3_c5d_other" name="ex3_c5d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c6row" class="hidden">
                         <td class="p-2">Child #6</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1920,7 +1920,7 @@
                             <input type="text" id="ex3_c6d_other" name="ex3_c6d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c7row" class="hidden">
                         <td class="p-2">Child #7</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1966,7 +1966,7 @@
                             <input type="text" id="ex3_c7d_other" name="ex3_c7d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c8row" class="hidden">
                         <td class="p-2">Child #8</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -2012,7 +2012,7 @@
                             <input type="text" id="ex3_c8d_other" name="ex3_c8d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c9row" class="hidden">
                         <td class="p-2">Child #9</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -2058,7 +2058,7 @@
                             <input type="text" id="ex3_c9d_other" name="ex3_c9d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c10row" class="hidden">
                         <td class="p-2">Child #10</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
