--- a/src/pages/instruments/08_pfq_uz.html
+++ b/src/pages/instruments/08_pfq_uz.html
@@ -360,7 +360,7 @@
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Patronat oilaga joylashtirilgan bolalar</h2>
 
 
-            <p id=fc4text" class="hidden mt-6">FC4. Hozirda ushbu patronat oila qaramog'ida bo'lgan har bir bola uchun quyidagi ma'lumotlarni yozib oling</p>
+            <p id="fc4text" class="hidden mt-6">FC4. Hozirda ushbu patronat oila qaramog'ida bo'lgan har bir bola uchun quyidagi ma'lumotlarni yozib oling</p>
 
 
             <div id="c1a" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
@@ -1489,7 +1489,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr id="c1row" class="hidden">
                         <td class="p-2">1-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1535,7 +1535,7 @@
                             <input type="text" id="ex3_c1d_other" name="ex3_c1d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c2row" class="hidden">
                         <td class="p-2">2-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1581,7 +1581,7 @@
                             <input type="text" id="ex3_c2d_other" name="ex3_c2d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c3row" class="hidden">
                         <td class="p-2">3-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1627,7 +1627,7 @@
                             <input type="text" id="ex3_c3d_other" name="ex3_c3d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c4row" class="hidden">
                         <td class="p-2">4-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1673,7 +1673,7 @@
                             <input type="text" id="ex3_c4d_other" name="ex3_c4d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c5row" class="hidden">
                         <td class="p-2">5-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1719,7 +1719,7 @@
                             <input type="text" id="ex3_c5d_other" name="ex3_c5d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c6row" class="hidden">
                         <td class="p-2">6-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1765,7 +1765,7 @@
                             <input type="text" id="ex3_c6d_other" name="ex3_c6d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c7row" class="hidden">
                         <td class="p-2">7-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1811,7 +1811,7 @@
                             <input type="text" id="ex3_c7d_other" name="ex3_c7d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c8row" class="hidden">
                         <td class="p-2">8-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1857,7 +1857,7 @@
                             <input type="text" id="ex3_c8d_other" name="ex3_c8d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c9row" class="hidden">
                         <td class="p-2">9-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1903,7 +1903,7 @@
                             <input type="text" id="ex3_c9d_other" name="ex3_c9d_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c10row" class="hidden">
                         <td class="p-2">10-chi bola</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
