ascunde si header-ul

--- a/src/pages/instruments/08_pfq_ru.html
+++ b/src/pages/instruments/08_pfq_ru.html
@@ -357,8 +357,7 @@
                 </div>
             </div>
 
-            <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Дети, помещенные в патронатную семью</h2>
-
+            <h2 id="fc4header" class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Дети, помещенные в патронатную семью</h2>
 
             <p id="fc4text" class="hidden mt-6">FC4. Для каждого ребенка, находящегося в настоящее время под опекой данной патронатной семьи, запишите следующую информацию</p>
 
