hidden in template

--- a/src/pages/instruments/08_pfq_en.html
+++ b/src/pages/instruments/08_pfq_en.html
@@ -357,7 +357,7 @@
                 </div>
             </div>
 
-            <h2 id="fc4header" class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Children placed in the patronat family</h2>
+            <h2 id="fc4header" class="hidden mt-10 mb-4 text-2xl font-bold text-gray-700">3. Children placed in the patronat family</h2>
 
             <p id="fc4text" class="hidden mt-6">FC4. For each child currently placed into care in this patronat family, please record the following information</p>
 
