--- a/src/pages/instruments/08_pfq_uz.html
+++ b/src/pages/instruments/08_pfq_uz.html
@@ -357,7 +357,7 @@
                 </div>
             </div>
 
-            <h2 id="fc4header" class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Patronat oilaga joylashtirilgan bolalar</h2>
+            <h2 id="fc4header" class="hidden mt-10 mb-4 text-2xl font-bold text-gray-700">3. Patronat oilaga joylashtirilgan bolalar</h2>
 
             <p id="fc4text" class="hidden mt-6">FC4. Hozirda ushbu patronat oila qaramog'ida bo'lgan har bir bola uchun quyidagi ma'lumotlarni yozib oling</p>
 
