hide table header

--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -1594,7 +1594,7 @@
                 </div>
             </div>
 
-            <div cid="c10f" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
+            <div id="c10f" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
                 <div>Child #10 f. What type of education is the child currently enrolled in?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c10f" name="fc4_c10f" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -1632,8 +1632,8 @@
                 </div>
             </div>
 
-            <p class="mt-6">EX3. For each child who left this family-type home during the reporting year, please record the following information</p>
-            <table class="w-full mt-6" aria-label="For each child who left this family-type home during the reporting year, please record the following information">
+            <p id="ex3text" class="hidden mt-6">EX3. For each child who left this family-type home during the reporting year, please record the following information</p>
+            <table id="ex3table" class="hidden w-full mt-6" aria-label="For each child who left this family-type home during the reporting year, please record the following information">
                 <thead>
                     <tr class="border-b">
                         <th class="p-2"></th>
