--- a/src/pages/instruments/08_pfq_ru.html
+++ b/src/pages/instruments/08_pfq_ru.html
@@ -1476,8 +1476,8 @@
                 </div>
             </div>
 
-            <p class="mt-6">EX3. По каждому ребенку, покинувшему данную патронатную семью в течении отчетного года, запишите следующую информацию.</p>
-            <table class="w-full mt-6" aria-label="For each child who left this family-type home during the reporting year, please record the following information">
+            <p id="ex3text" class="hidden mt-6">EX3. По каждому ребенку, покинувшему данную патронатную семью в течении отчетного года, запишите следующую информацию.</p>
+            <table id="ex3table" class="hidden w-full mt-6" aria-label="For each child who left this family-type home during the reporting year, please record the following information">
                 <thead>
                     <tr class="border-b">
                         <th class="p-2"></th>
