--- a/src/pages/instruments/07_ftch_uz.html
+++ b/src/pages/instruments/07_ftch_uz.html
@@ -1594,7 +1594,7 @@
                 </div>
             </div>
 
-            <div cid="c10f" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
+            <div id="c10f" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
                 <div>10-chi bola f. Hozirda bola qanday ta'lim muassasasida o'qiydi?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c10f" name="fc4_c10f" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -1632,8 +1632,8 @@
                 </div>
             </div>
 
-            <p class="mt-6">EX3. 2023-yil davomida ushbu oilaviy bolalar uyini tark etgan har bir bola uchun quyidagi maʼlumotlarni yozib oling</p>
-            <table class="w-full mt-6" aria-label="2023-yil davomida ushbu oilaviy bolalar uyini tark etgan har bir bola uchun quyidagi maʼlumotlarni yozib oling">
+            <p id="ex3text" class="hidden mt-6">EX3. 2023-yil davomida ushbu oilaviy bolalar uyini tark etgan har bir bola uchun quyidagi maʼlumotlarni yozib oling</p>
+            <table id="ex3table" class="hidden w-full mt-6" aria-label="2023-yil davomida ushbu oilaviy bolalar uyini tark etgan har bir bola uchun quyidagi maʼlumotlarni yozib oling">
                 <thead>
                     <tr class="border-b">
                         <th class="p-2"></th>
