--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -1852,7 +1852,6 @@
 
             <!-- CAREGIVER -->
             <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. BOLANI PARVARISHLAB KELGAN SHAXS</h3>
-            <small class="my-2 block italic text-red-500">Ushbu bo'lim, agar bola tizimga qabul qilinishdan oldin, o'z onasi yoki otasi emas, balki boshqa birovning qaramog'ida bo'lgan holatda to'ldirilishi zarur. Aks holda, 4-bo'limga o'ting.</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
@@ -2766,27 +2765,33 @@
                 <div>
                     <select id="sa5t" name="sa5t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
-                        <option value="11">11. Bolalar uyi</option>
-                        <option value="12">12. Mehribonlik uyi</option>
-                        <option value="13">13. “Muruvvat” nogironligi bo’lgan bolalar uchun internat uyi</option>
-                        <option value="14">14. SOS-bolalar qishloqlari / oilalari</option>
-                        <option value="15">15. Oila turidagi bolalar uyi</option>
-                        <option value="16">16. Patronat oila</option>
-                        <option value="17">17. Vasiylik/homiylik</option>
-                        <option value="21">21. I tur - kar bolalar uchun internatlar</option>
-                        <option value="22">22. II tur - eshitish qobiliyati zaif va kelgusida eshitish qobiliyatini yo’qotadiganlar uchun internatlar</option>
-                        <option value="23">23. III tur - “Nurli maskan” ko’zi ojiz bolalar uchun ixtisoslashtirilgan maktab-internatlari</option>
-                        <option value="24">24. IV tur - ko’zi ojiz va keyinchalik ko’rish qobiliyatini yo’qotadiganlar uchun “Noorli maskan” ixtisoslashtirilgan maktab-internatlari</option>
-                        <option value="25">25. V tur - og’ir nutq buzilishi bo’lgan bolalar uchun internatlar</option>
-                        <option value="26">26. VI tur - tayanch-harakat apparati nuqsonlari bo’lgan bolalar uchun internatlar</option>
-                        <option value="27">27. VII tur - aqli zaif bolalar maktab-internatlari</option>
-                        <option value="28">28. VIII tur - aqli zaif bolalar maktab-internatlarini qo’llash</option>
-                        <option value="31">31. Ko'p tarmoqli ixtisoslashtirilgan maktabgacha ta'lim tashkilotlari</option>
-                        <option value="32">32. Maxsus ta'lim ehtiyojlariga ega bolalar uchun ixtisoslashtirilgan maktablar</option>
-                        <option value="33">33. Imkoniyatlari cheklangan shaxslar uchun ixtisoslashtirilgan respublika kasb-hunar kolleji</option>
-                        <option value="34">34. Sanatoriy turidagi ixtisoslashtirilgan davlat ta'lim muassasalari</option>
-                        <option value="35">35. Respublika ta'lim-tarbiya muassasalari (RTTM)</option>
-                        <option value="36">36. Voyaga yetmaganlar uchun ijtimoiy va huquqiy yordam markazlari</option>
+NA
+                            <option value="11">11. Bolalar uyi</option>
+                            <option value="12">12. Mehribonlik uyi</option>
+                            <option value="13">13. “Muruvvat” nogironligi bo’lgan bolalar uchun internat uyi</option>
+                            <option value="14">14. SOS-bolalar qishloqlari / oilalari</option>
+                            <option value="15">15. Oila turidagi bolalar uyi</option>
+                            <option value="16">16. Patronat oila</option>
+                            <option value="17">17. Vasiylik/homiylik</option>
+                        </optgroup>
+NA
+                            <option value="21">21. I tur - kar bolalar uchun internatlar</option>
+                            <option value="22">22. II tur - eshitish qobiliyati zaif va kelgusida eshitish qobiliyatini yo’qotadiganlar uchun internatlar</option>
+                            <option value="23">23. III tur - “Nurli maskan” ko’zi ojiz bolalar uchun ixtisoslashtirilgan maktab-internatlari</option>
+                            <option value="24">24. IV tur - ko’zi ojiz va keyinchalik ko’rish qobiliyatini yo’qotadiganlar uchun “Noorli maskan” ixtisoslashtirilgan maktab-internatlari</option>
+                            <option value="25">25. V tur - og’ir nutq buzilishi bo’lgan bolalar uchun internatlar</option>
+                            <option value="26">26. VI tur - tayanch-harakat apparati nuqsonlari bo’lgan bolalar uchun internatlar</option>
+                            <option value="27">27. VII tur - aqli zaif bolalar maktab-internatlari</option>
+                            <option value="28">28. VIII tur - aqli zaif bolalar maktab-internatlarini qo’llash</option>
+                        </optgroup>
+NA
+                            <option value="31">31. Ko'p tarmoqli ixtisoslashtirilgan maktabgacha ta'lim tashkilotlari</option>
+                            <option value="32">32. Maxsus ta'lim ehtiyojlariga ega bolalar uchun ixtisoslashtirilgan maktablar</option>
+                            <option value="33">33. Imkoniyatlari cheklangan shaxslar uchun ixtisoslashtirilgan respublika kasb-hunar kolleji</option>
+                            <option value="34">34. Sanatoriy turidagi ixtisoslashtirilgan davlat ta'lim muassasalari</option>
+                            <option value="35">35. Respublika ta'lim-tarbiya muassasalari (RTTM)</option>
+                            <option value="36">36. Voyaga yetmaganlar uchun ijtimoiy va huquqiy yordam markazlari</option>
+                        </optgroup>
                     </select>
                 </div>
             </div>
@@ -5389,7 +5394,7 @@ NA
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">10. BOLANING HOZIRGI MA'LUMOTI/TA'LIM DARAJASI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">EDK0. Bola maktabgacha ta'lim muassasasiga qabul qilinganmi?<small class="my-2 block italic text-red-500">Tekshiring 1. Ha, uyda o'qiydigan bolalar uchun ham.</small></div>
+                <div>EDK0. Bola maktabgacha ta'lim muassasasiga qabul qilinganmi?<small class="my-2 block italic text-red-500">Tekshiring 1. Ha, uyda o'qiydigan bolalar uchun ham.</small></div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="edk0-1" name="edk0" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5403,7 +5408,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">EDK1. Bola qaysi turdagi ta'limga qabul qilindi?</div>
+                <div>EDK1. Bola qaysi turdagi ta'limga qabul qilindi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk1-1" name="edk1" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5425,7 +5430,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">EDK2. Bola qaysi ta'lim tsikliga qabul qilingan?</div>
+                <div>EDK2. Bola qaysi ta'lim tsikliga qabul qilingan?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk2-0" name="edk2" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
