--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -1852,7 +1852,6 @@
 
             <!-- CAREGIVER -->
             <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. ЛИЦО, КОТОРОЕ ЗАБОТИЛОСЬ О РЕБЕНКЕ</h3>
-            <small class="my-2 block italic text-red-500">Этот раздел заполняется только в том случае, если до поступления в систему ребенок находился под опекой  кого-либо, кроме матери или отца ребенка. В ином случае перейдите к разделу 4.</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
@@ -2766,27 +2765,33 @@
                 <div>
                     <select id="sa5t" name="sa5t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
-                        <option value="11">11. Дом ребенка</option>
-                        <option value="12">12. детские «дома милосердия» - Мехрибонлик</option>
-                        <option value="13">13. Дома-Интернаты Для Детей С Инвалидностью «Мурувват»</option>
-                        <option value="14">14. SOS Детские деревни</option>
-                        <option value="15">15. Детские дома семейного типа</option>
-                        <option value="16">16. Патронатная семья</option>
-                        <option value="17">17. Опека/ Попечительство</option>
-                        <option value="21">21. I тип - школы-интернаты для глухих детей</option>
-                        <option value="22">22. Тип II - школы-интернаты для слабослышащих и тех, кто впоследствии потеряет слух</option>
-                        <option value="23">23. III тип - специализированные школы-интернаты для слепых детей “Нурли Маскан”</option>
-                        <option value="24">24. IV тип - специализированные школы-интернаты “Нурли Маскан” для слабовидящих и тех, кто впоследствии потеряет зрение</option>
-                        <option value="25">25. V тип - школы-интернаты для детей с тяжелыми нарушениями речи</option>
-                        <option value="26">26. VI тип - школы-интернаты для детей с нарушениями опорно-двигательного аппарата</option>
-                        <option value="27">27. Тип VII - школы-интернаты для детей с задержкой психического развития</option>
-                        <option value="28">28. Тип VIII - поддержка школ-интернатов для детей с задержкой интеллектуального развития</option>
-                        <option value="31">31. многопрофильные специализированные дошкольные образовательные организации</option>
-                        <option value="32">32. специализированные школы для детей с особыми образовательными потребностями</option>
-                        <option value="33">33. Республиканский специализированный колледж для лиц с ограниченными возможностями</option>
-                        <option value="34">34. специализированные  государственные образовательные учреждения санаторного типа</option>
-                        <option value="35">35. Республиканские  учебно-воспитательные учреждения (РУВУ)</option>
-                        <option value="36">36. Центры социальной и правовой помощи несовершеннолетним</option>
+NA
+                            <option value="11">11. Дом ребенка</option>
+                            <option value="12">12. детские «дома милосердия» - Мехрибонлик</option>
+                            <option value="13">13. Дома-Интернаты Для Детей С Инвалидностью «Мурувват»</option>
+                            <option value="14">14. SOS Детские деревни</option>
+                            <option value="15">15. Детские дома семейного типа</option>
+                            <option value="16">16. Патронатная семья</option>
+                            <option value="17">17. Опека/ Попечительство</option>
+                        </optgroup>
+NA
+                            <option value="21">21. I тип - школы-интернаты для глухих детей</option>
+                            <option value="22">22. Тип II - школы-интернаты для слабослышащих и тех, кто впоследствии потеряет слух</option>
+                            <option value="23">23. III тип - специализированные школы-интернаты для слепых детей “Нурли Маскан”</option>
+                            <option value="24">24. IV тип - специализированные школы-интернаты “Нурли Маскан” для слабовидящих и тех, кто впоследствии потеряет зрение</option>
+                            <option value="25">25. V тип - школы-интернаты для детей с тяжелыми нарушениями речи</option>
+                            <option value="26">26. VI тип - школы-интернаты для детей с нарушениями опорно-двигательного аппарата</option>
+                            <option value="27">27. Тип VII - школы-интернаты для детей с задержкой психического развития</option>
+                            <option value="28">28. Тип VIII - поддержка школ-интернатов для детей с задержкой интеллектуального развития</option>
+                        </optgroup>
+NA
+                            <option value="31">31. многопрофильные специализированные дошкольные образовательные организации</option>
+                            <option value="32">32. специализированные школы для детей с особыми образовательными потребностями</option>
+                            <option value="33">33. Республиканский специализированный колледж для лиц с ограниченными возможностями</option>
+                            <option value="34">34. специализированные  государственные образовательные учреждения санаторного типа</option>
+                            <option value="35">35. Республиканские  учебно-воспитательные учреждения (РУВУ)</option>
+                            <option value="36">36. Центры социальной и правовой помощи несовершеннолетним</option>
+                        </optgroup>
                     </select>
                 </div>
             </div>
@@ -5389,7 +5394,7 @@ NA
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">10. ТЕКУЩЕЕ ОБРАЗОВАНИЕ РЕБЕНКА</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">EDK0. Зачислен ли ребенок в детский сад/школу?<small class="my-2 block italic text-red-500">Проверить 1. Да, также для детей, обучающихся на дому.</small></div>
+                <div>EDK0. Зачислен ли ребенок в детский сад/школу?<small class="my-2 block italic text-red-500">Проверить 1. Да, также для детей, обучающихся на дому.</small></div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="edk0-1" name="edk0" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5403,7 +5408,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">EDK1. На какой вид образования принят ребенок?</div>
+                <div>EDK1. На какой вид образования принят ребенок?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk1-1" name="edk1" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5425,7 +5430,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-3">EDK2. На какой образовательный цикл зачислен ребенок?</div>
+                <div>EDK2. На какой образовательный цикл зачислен ребенок?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk2-0" name="edk2" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
