bug fixes i5 si i5a

--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -400,7 +400,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>OBS. Observations</div>
                 <div class="flex gap-4">
-                    <textarea id="cr10" name="cr10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
+                    <textarea id="obs" name="obs" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
                 </div>
             </div>
 
